--- a/html/love1.html
+++ b/html/love1.html
@@ -238,16 +238,16 @@
     
       </div>
 
-      <!-- Proposal Button -->
+      <!-- Proposal Button 
       <button
         id="proposeButton"
         class="propose-btn"
-        onclick="window.location.href='...................................'"
+        onclick="window.location.href='book.html'"
       >
        let us read our story ❤ (coming soon)
       </button>
     </div>
-
+-->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const button = document.getElementById("proposeButton");
