--- a/html/love1.html
+++ b/html/love1.html
@@ -258,7 +258,7 @@
           blinkScreen.classList.add("active"); // Start blink effect
 
           setTimeout(() => {
-            window.location.href = "book.html"; // Navigate after blink
+            window.location.href = "..........."; // Navigate after blink
           }, 1000); // Adjust timing for faster/slower blink
         });
 
